# parameter-variability

./: .bumpversion.toml  .gitignore  .zenodo.json  LICENSE  README.md  RELEASE.md  fcode.sh  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: main.yml
release-notes/: 0.1.0.md  0.2.0.md  0.2.1.md
src/models/: model1.py  model1.xml
src/parameter_variability/: __init__.py  petab_factory.py  run_optimization.py  utils.py
src/parameter_variability/bayes/: bayes_example.py  sampler.py
src/parameter_variability/bayes/pymc_only/: bayes_example.py  sampler.py
src/parameter_variability/bayes/pypesto/: exp_test.yml  experiment.py  experiment_factory.py  petab_factory.py  run_optimization.py
src/parameter_variability/bayes/pypesto/icg_body_flat/: experiment_factory.py  petab_factory.py  petab_optimization.py  run_optimization.py
src/parameter_variability/bayes/pypesto/icg_example/: experiment_factory.py  petab_factory.py
src/parameter_variability/bayes/pypesto/simple_chain/: experiment_factory.py  model_check.py  petab.yaml  petab_factory.py  petab_optimization.py  run_optimization.py  xps.yaml
src/parameter_variability/bayes/pypesto/simple_pk_multiple/: conditions_multi_pk.tsv  multi_pk_petab.py  parameters_multi_pk.tsv
src/parameter_variability/examples/: example_simple_chain.py  example_simple_pk.py
src/parameter_variability/icg_body_flat/: experiment_factory.py
src/parameter_variability/models/: config.py  icg_example.py  model1.py  model2.md  model2.py  model2.xml  simple_chain.py  simple_chain_example.py  simple_pk.py  simple_pk_example.py  simulation1.py  simulation2.py  simulation2_modelling.py  simulation2_sampling.py  simulation_bayes2.py
src/parameter_variability/models/sbml/: icg_body_flat.md  icg_body_flat.xml  simple_chain.md  simple_pk.md  simple_pk.xml  simple_pk_layout.xml
src/parameter_variability/pesto/: example1.py  example_sampling.py
src/parameter_variability/simple_chain/: experiment_factory.py
src/parameter_variability/simple_pk/: simple_pk_petab.py
src/parameter_variability/simple_pk_multiple/: multi_pk_optimization.py  multi_pk_petab.py
src/parameter_variability/simulation/: example_simple_chain.py  sampler.py
src/parvar/: __init__.py  create_models.py  plots.py  run_optimizations.py
src/parvar/analysis/: bias_histogram_plot.py  ess_plot.py  experiment.py  misc.py  petab_factory.py  petab_optimization.py  plots.py  reference_plot.py  run_analysis.py  run_optimization.py  runtime_boxplot.py  runtime_plot.py  utils.py
src/parvar/analysis/plots/: bias_histogram_plot.py  ess_violinplot.py  grouped_boxplot.py  reference_plot.py  runtime_boxplot.py
src/parvar/experiments/: create_experiments.py  experiment.py  petab_factory.py  utils.py
src/parvar/experiments/factories/: __init__.py  icg_body_flat.py  simple_chain.py  simple_pk.py
src/parvar/factories/: icg_body_flat.py  simple_chain.py  simple_pk.py
src/parvar/models/: icg_example.py  simple_chain.py  simple_chain_example.py  simple_pk.py  simple_pk_example.py
src/parvar/models/sbml/: icg_body_flat.md  icg_body_flat.xml  simple_chain.md  simple_chain.xml  simple_pk.md  simple_pk.xml  simple_pk_layout.xml
src/parvar/optimization/: petab_optimization.py  run.py  run_optimization.py
tests/: test_create_models.py  test_experiment.py  test_factories.py  test_optimizations.py
tests/analysis/: test_experiment.py  test_utils.py
tests/experiments/: test_experiment.py  test_factories.py  test_utils.py
tests/models/: test_create_models.py
tests/optimization/: test_optimizations.py
